# evacuation-core

./: Cargo.toml  README.md
evacuation_core/: Cargo.toml
evacuation_core/src/: bim.rs  lib.rs
evacuation_core/src/bim/: bim_json_object.rs  bim_output.rs  bim_polygon_tools.rs  bim_tools.rs  json_object.rs  json_renga.rs
evacuation_core/src/python/: call_python.rs
evacuation_core/src/snapshots/: evacuation__bim__tests__evacuation_modeling@building_test-density-0.1.snap  evacuation_core__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.1.snap  evacuation_core__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.2.snap  evacuation_core__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.3.snap  evacuation_core__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.4.snap  evacuation_core__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-0.5.snap  evacuation_core__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-1.0.snap  evacuation_core__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-2.0.snap  evacuation_core__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-3.0.snap  evacuation_core__bim__tests__evacuation_modeling@b1-v2.1_with_corridors_v1.1-density-4.0.snap  evacuation_core__bim__tests__evacuation_modeling@building_test-density-0.1.snap  evacuation_core__bim__tests__evacuation_modeling@building_test-density-0.2.snap  evacuation_core__bim__tests__evacuation_modeling@building_test-density-0.3.snap  evacuation_core__bim__tests__evacuation_modeling@building_test-density-0.4.snap  evacuation_core__bim__tests__evacuation_modeling@building_test-density-0.5.snap  (+95 more)
(+1 files in other folders)
