[package]
name = "evacuation-core"
version = "0.1.0"
description = "Evacuation modeling App"
authors = [""]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[dependencies]
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
chrono = "0.4.40"
fnv = "1.0.7"
petgraph = "0.7.1"
rand = "0.9.0"
uuid = { version = "1.15.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
triangle-rs = { git = "https://github.com/NikBel3476/triangle-rs.git", rev = "0a8faac" }
spade = "2.13.0"
triangulate = { git = "https://github.com/colinjneville/triangulate.git", branch = "master" }
pyo3 = { version = "0.23.5", features = ["auto-initialize"] }

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml"] }
rstest = "0.24.0"
