[package]
name = "evacuation-core"
version = "0.1.0"
description = "Evacuation modeling App"
authors = [""]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
fnv = "1.0.7"
petgraph = "0.8.2"
rand = "0.9.1"
uuid = { version = "1.17.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
triangle-rs = { git = "https://github.com/NikBel3476/triangle-rs.git", rev = "0a8faac" }
spade = "2.13.1"
triangulate = { git = "https://github.com/colinjneville/triangulate.git", branch = "master" }
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
rstest = "0.25.0"
